[gd_scene load_steps=16 format=3 uid="uid://cimcetg0qdemh"]

[ext_resource type="Texture2D" uid="uid://bfhypggh5tkro" path="res://Background/Brown.png" id="1_7hqcv"]
[ext_resource type="Script" uid="uid://bmgkyfq36xoju" path="res://Chapter2lvls/ch_2_lvl_1.gd" id="1_dshlr"]
[ext_resource type="Texture2D" uid="uid://tbpkdw828swb" path="res://objects/Orange_block.png" id="2_5mjkp"]
[ext_resource type="PackedScene" uid="uid://c6tnrclb70hyi" path="res://Character/player.tscn" id="3_dshlr"]
[ext_resource type="PackedScene" uid="uid://dgo2istfpbd03" path="res://camera/camera_2d.tscn" id="4_5mjkp"]
[ext_resource type="Texture2D" uid="uid://dfdq8a4rjdbea" path="res://objects/opening_orange_anim.png" id="6_5kx7e"]
[ext_resource type="Script" uid="uid://cbcsgokn4ifti" path="res://Chapter2lvls/character_body_2d.gd" id="7_wxkcy"]
[ext_resource type="Texture2D" uid="uid://ceh0q2psmb6o7" path="res://objects/28_cookies.png" id="8_fvvxn"]
[ext_resource type="AudioStream" uid="uid://cfrkdcxbbcs84" path="res://Sounds/Minimalist4.mp3" id="9_fvvxn"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fvvxn"]
texture = ExtResource("2_5mjkp")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_1adw3"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_fvvxn")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5kx7e"]
size = Vector2(345, 267)

[sub_resource type="CircleShape2D" id="CircleShape2D_73qod"]
radius = 18.3848

[sub_resource type="SegmentShape2D" id="SegmentShape2D_wxkcy"]
a = Vector2(-89, 129)
b = Vector2(42, 126)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wxkcy"]
size = Vector2(49, 233)

[node name="Ch2_lvl1" type="Node2D"]
script = ExtResource("1_dshlr")

[node name="Brown" type="Sprite2D" parent="."]
position = Vector2(586, 325)
scale = Vector2(18.2812, 10.0625)
texture = ExtResource("1_7hqcv")

[node name="OpeningOrangeAnim" type="Sprite2D" parent="."]
position = Vector2(104, 353)
texture = ExtResource("6_5kx7e")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(1, 0)
tile_set = SubResource("TileSet_1adw3")
format = 2
layer_0/tile_data = PackedInt32Array(393216, 1, 0, 458752, 1, 0, 524288, 1, 0, 589824, 1, 0, 393217, 1, 0, 458753, 1, 0, 524289, 1, 0, 589825, 1, 0, 393218, 1, 0, 458754, 1, 0, 524290, 1, 0, 589826, 1, 0, 393219, 1, 0, 458755, 1, 0, 524291, 1, 0, 589827, 1, 0, 393220, 1, 0, 458756, 1, 0, 524292, 1, 0, 589828, 1, 0, 393221, 1, 0, 458757, 1, 0, 524293, 1, 0, 589829, 1, 0, 393222, 1, 0, 458758, 1, 0, 524294, 1, 0, 589830, 1, 0, 393229, 1, 0, 458765, 1, 0, 524301, 1, 0, 589837, 1, 0, 393230, 1, 0, 458766, 1, 0, 524302, 1, 0, 589838, 1, 0, 393231, 1, 0, 458767, 1, 0, 524303, 1, 0, 589839, 1, 0, 393232, 1, 0, 458768, 1, 0, 524304, 1, 0, 589840, 1, 0, 393233, 1, 0, 458769, 1, 0, 524305, 1, 0, 589841, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 589842, 1, 0, 655378, 1, 0, -65518, 1, 0, 18, 1, 0, 65554, 1, 0, 131090, 1, 0, 196626, 1, 0, 393234, 1, 0, 458770, 1, 0, 524306, 1, 0, -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, 65535, 1, 0, 131071, 1, 0, 196607, 1, 0, 262143, 1, 0, 327679, 1, 0, 393215, 1, 0, 458751, 1, 0, 524287, 1, 0, 589823, 1, 0, 655359, 1, 0, 720895, 1, 0, 327680, 1, 0, 262144, 1, 0, 196608, 1, 0, 131072, 1, 0, 65536, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 13, 1, 0, 14, 1, 0, 12, 1, 0, 11, 1, 0, 10, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 65553, 1, 0, 131089, 1, 0, 196625, 1, 0, 393223, 1, 0, 458759, 1, 0, 524295, 1, 0, 589831, 1, 0, 655367, 1, 0, 393226, 1, 0, 458762, 1, 0, 524298, 1, 0, 589834, 1, 0, 655370, 1, 0, 393227, 1, 0, 458763, 1, 0, 524299, 1, 0, 589835, 1, 0, 655371, 1, 0, 393228, 1, 0, 458764, 1, 0, 524300, 1, 0, 589836, 1, 0, 655372, 1, 0)

[node name="Player" parent="." instance=ExtResource("3_dshlr")]
position = Vector2(166, 352)

[node name="Camera2D" parent="." instance=ExtResource("4_5mjkp")]
position = Vector2(579, 321)

[node name="for_co" type="Area2D" parent="."]
position = Vector2(734, 398)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="for_co"]
position = Vector2(244.5, 112.5)
shape = SubResource("RectangleShape2D_5kx7e")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 360.0
offset_top = 302.0
offset_right = 835.0
offset_bottom = 342.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]

[node name="moving_cookies" type="CharacterBody2D" parent="."]
script = ExtResource("7_wxkcy")

[node name="Sprite2D" type="Sprite2D" parent="moving_cookies"]
position = Vector2(974.25, 356.25)
scale = Vector2(2.04687, 1.73437)
texture = ExtResource("8_fvvxn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="moving_cookies"]
position = Vector2(973, 357)
shape = SubResource("CircleShape2D_73qod")

[node name="Down area" type="Area2D" parent="."]

[node name="down collision" type="CollisionShape2D" parent="Down area"]
position = Vector2(599, 429)
shape = SubResource("SegmentShape2D_wxkcy")

[node name="right area" type="Area2D" parent="."]

[node name="right collision" type="CollisionShape2D" parent="right area"]
position = Vector2(1150.5, 334)
shape = SubResource("RectangleShape2D_wxkcy")

[node name="replay sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_fvvxn")
volume_db = 12.0

[connection signal="body_entered" from="for_co" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Down area" to="." method="_on_down_area_body_entered"]
[connection signal="body_exited" from="right area" to="." method="_on_right_area_body_exited"]
